# ENGSCI_Group_6_OR

./: .env  .gitignore  .replit  LAB_5_Sebastian.ipynb  LinearProgram.py  LinearProgram2.py  LocationCentralNorth.csv  LocationCentralNorthWeekend.csv  LocationCentralSouth.csv  LocationCentralSouthWeekend.csv  LocationEastRegion.csv  LocationEastRegionWeekend.csv  LocationNorthRegion.csv  LocationSouthRegion.csv  LocationWestRegion.csv  OR_Project.py  OR_visualisations.ipynb  README.md  WoolworthsLocations.csv  WoolworthsTravelDurations_closure.csv  WoolworthsVRP.lp  ben.py  main.py  maps.py  maps_closure.py  median.csv  median_demand.csv  newOR_visualisations.ipynb  pyproject.toml  routesmapping.py  routesmappingweekday.py  routesmappingweekend.py  serena.py  serenatest.py  simulations.py  simulations_closure.py  tempCodeRunnerFile.py  testing.py  variance_demand.csv  weekday_mean_demand_and_variance.csv  (+6 more)
Additionals/: LAB_5_Sebastian.ipynb  OR_visualisations.ipynb  WoolworthsDemands_with_medain_variance.xlsx  variance_demand.ods
Data/: LocationCentralNorth.csv  LocationCentralNorthWeekend.csv  LocationCentralSouth.csv  LocationCentralSouthWeekend.csv  LocationEastRegion.csv  LocationEastRegionWeekend.csv  LocationNorthRegion.csv  LocationSouthRegion.csv  LocationSouthRegionWeekend.csv  LocationWestRegion.csv  LocationWestRegionWeekend.csv  WoolworthsDemands.csv  WoolworthsDistances.csv  WoolworthsLocationsSorted.csv  WoolworthsLocations_closure.csv  WoolworthsLocations_weekendclosure.csv  mean_demand_and_variance.csv  median_demand.csv  variance_demand.csv  (+4 more)
(+16 files in other folders)
