[tool.poetry]
name = "repl_python3_ENGSCIGroup6OR"
version = "0.1.0"
description = ""
authors = ["SebastianThoma3 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
PuLP = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
