[tool.poetry]
name = "repl_python3_ENGSCIGroup6OR"
version = "0.1.0"
description = ""
authors = ["SebastianThoma3 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
PuLP = "^2.5.1"
openrouteservice = "^2.3.3"
python-dotenv = "^0.19.0"
plotnine = "^0.8.0"
folium = "^0.12.1"
statistics = "^1.0.3"
seaborn = "^0.11.2"
matplotlib = "^3.4.3"
ipython = "^7.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
